# xmp-android

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties
app/: build.gradle  build.gradle.kts  proguard-project.txt
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/aidl/org/helllabs/android/xmp/service/: ModInterface.aidl  PlayerCallback.aidl
app/src/main/assets/: changelog.html
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  OpenSL.cpp  OpenSL.h  audio.h  opensl.c  xmp-jni.c  xmp-jni.cpp
app/src/main/java/org/helllabs/android/xmp/: PrefManager.kt  Xmp.java  Xmp.kt  XmpApplication.java  XmpApplication.kt
app/src/main/java/org/helllabs/android/xmp/api/: ApiHelperImpl.kt
app/src/main/java/org/helllabs/android/xmp/browser/: BasePlaylistActivity.java  BasePlaylistActivity.kt  Examples.kt  FilelistActivity.java  FilelistActivity.kt  FilelistNavigation.java  FilelistNavigation.kt  FilelistViewModel.kt  InputDialog.kt  PlaylistActivity.java  PlaylistActivity.kt  PlaylistAddEdit.kt  PlaylistMenu.java  PlaylistMenu.kt
app/src/main/java/org/helllabs/android/xmp/browser/playlist/: Playlist.java  Playlist.kt  PlaylistAdapter.java  PlaylistAdapter.kt  PlaylistFilter.java  PlaylistFilter.kt  PlaylistItem.kt  PlaylistUtils.kt
app/src/main/java/org/helllabs/android/xmp/di/: AppModule.kt  ModArchiveModule.kt  ServiceModule.kt
app/src/main/java/org/helllabs/android/xmp/extension/: Api.kt  Button.kt  Dialogs.kt  ImageView.kt  OnScrollListener.kt  TextView.kt  View.kt
app/src/main/java/org/helllabs/android/xmp/modarchive/: Downloader.java  Downloader.kt  ModArchiveConstants.kt  Search.java  Search.kt  SearchError.java  SearchError.kt  SearchHistory.kt
app/src/main/java/org/helllabs/android/xmp/modarchive/adapter/: ArtistAdapter.kt  ArtistArrayAdapter.kt  HistoryAdapter.kt  ModAdapter.kt  ModuleArrayAdapter.java  ModuleArrayAdapter.kt  SearchListAdapter.kt
app/src/main/java/org/helllabs/android/xmp/modarchive/model/: Artist.java  Artist.kt  Module.java  Module.kt  Sponsor.kt
app/src/main/java/org/helllabs/android/xmp/modarchive/request/: ArtistRequest.java  ArtistRequest.kt  ModArchiveRequest.java  ModArchiveRequest.kt  ModuleRequest.kt
app/src/main/java/org/helllabs/android/xmp/modarchive/response/: ArtistResponse.kt  HardErrorResponse.java  HardErrorResponse.kt  ListResponse.kt  ModArchiveResponse.kt  ModuleResponse.kt  SoftErrorResponse.java  SoftErrorResponse.kt
app/src/main/java/org/helllabs/android/xmp/modarchive/result/: ArtistModulesResult.java  ArtistModulesResult.kt  ArtistResult.java  ArtistResult.kt  ArtistResultViewModel.kt  ModuleResult.java  ModuleResult.kt  ModuleResultViewModel.kt  RandomResult.java  RandomResult.kt  Result.java  Result.kt  SearchListResult.kt  SearchListViewModel.kt  TitleResult.java  TitleResult.kt
app/src/main/java/org/helllabs/android/xmp/model/: BreadCrumb.kt  History.kt  ModInfo.kt  PlaylistItem.kt  XmlModels.kt
app/src/main/java/org/helllabs/android/xmp/player/: PlayerActivity.java  PlayerActivity.kt  PlayerSheet.kt  PlayerUtils.kt  ScreenReceiver.java  ScreenReceiver.kt  ScreenSizeHelper.kt  Sheet.kt  Sidebar.java  Sidebar.kt  Util.kt
app/src/main/java/org/helllabs/android/xmp/player/viewer/: ChannelViewer.kt  Effects.kt  Viewer.java  (+5 more)
app/src/main/java/org/helllabs/android/xmp/preferences/: PrefManager.kt  Preferences.java  Preferences.kt  PreferencesFragment.kt  SeekBarPreference.java  SeekBarPreference.kt
app/src/main/java/org/helllabs/android/xmp/repository/: Repository.kt
app/src/main/java/org/helllabs/android/xmp/service/: MediaButtons.java  MediaButtons.kt  Notifier.kt  PlayerService.java  PlayerService.kt  ReceiverHelper.java  ReceiverHelper.kt
app/src/main/java/org/helllabs/android/xmp/util/: ApiUtils.kt  ChangeLog.java  ChangeLog.kt  Crossfader.java  Crossfader.kt  FileUtils.java  FileUtils.kt  InfoCache.java  InfoCache.kt  Log.java  Log.kt  Message.java  Message.kt  ModInfo.java  ModInfo.kt  ModuleUtils.kt  UiMessage.kt  UiUtils.kt  Utils.kt
app/src/main/res/anim/: item_animation.xml
app/src/main/res/drawable/: anim_pause_play.xml  anim_play_pause.xml  bottom_sheet.xml  button_search_background.xml  fmt.xml  guru_frame.xml  guru_frame_2.xml  ic_auto_repeat_off.xml  ic_auto_repeat_on.xml  ic_auto_sequence_off.xml  ic_auto_sequence_on.xml  ic_auto_shuffle_off.xml  ic_auto_shuffle_on.xml  ic_drag.xml  ic_launcher_foreground.xml  ic_repeat_off.xml  ic_repeat_on.xml  ic_repeat_one_on.xml  ic_sheet_handle.xml  ic_shuffle_on.xml  ic_unlock.xml  ic_xmp_auto.xml  ic_xmp_vector.xml  section_background.xml  thumb.xml  thumb_line.xml  thumb_line_drawable.xml
app/src/main/res/drawable-anydpi-v24/: ic_notification.xml
app/src/main/res/layout/: about.xml  activity_add_edit_playlist.xml  activity_modlist.xml  activity_player.xml  activity_playlist.xml  activity_playlist_menu.xml  activity_result_list.xml  activity_result_module.xml  activity_search.xml  activity_search_error.xml  changelog.xml  dialog_changelog.xml  dialog_input.xml  error_message.xml  format_list_item.xml  item_playlist.xml  item_playlist_card.xml  item_playlist_drag.xml  item_search.xml  item_search_history.xml  item_search_list.xml  item_single.xml  item_song.xml  layout_appbar.xml  layout_bottom_sheet.xml  layout_changelog.xml  layout_control_info.xml  layout_error.xml  layout_error_message.xml  layout_list_controls.xml  layout_player.xml  layout_player_controls.xml  list_formats.xml  modlist.xml  newlist.xml  player.xml  player_main.xml  player_sidebar.xml  playlist.xml  playlist_card.xml  (+14 more)
app/src/main/res/menu/: menu_delete.xml  menu_history.xml  menu_options.xml  menu_player.xml  options_menu.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: network_security_config.xml  preferences.xml
buildSrc/src/main/java/: Dependencies.kt
gradle/wrapper/: gradle-wrapper.properties
resources/: Desktop Head Unit.bat
(+147 files in other folders)
